--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
               Aillant appris la plus part du temps en autodidacte, je suis à l'aise sur plusieurs technologies, ce qui
               m'aide grandement dans mon parcours scolaire.
             </p>
-            <a href=""> Mon CV </a>
+            <a href="https://enzo0011.github.io/enzo0011/files/CV_Galiegue_Enzo.pdf"> Mon CV </a>
           </div>
         </div>
         <div class="col-md-6">
